Updated the HTML and CSS so that body text has a fixed font size and the Add and Subtract UI elements doesn't overlap each other.

--- a/Date Calculator/wwwroot/css/site.css
+++ b/Date Calculator/wwwroot/css/site.css
@@ -97,7 +97,7 @@ header
 #dateToDateInputContainer, #addSubtractInputContainer, #aboutContainer
 {
   position: absolute;
-  max-height: 50%;
+  max-height: calc(50% - 10px);
   font-family: Arial, Helvetica, sans-serif;
   width: calc(100% - 10px);
   bottom: 5px;
@@ -277,6 +277,10 @@ html {
 .textDark
 {
   color: #fff;
+}
+.textSize12
+{
+  font-size: 12pt;
 }
 
 .tableRowLight
